--- a/package.json
+++ b/package.json
@@ -5,21 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "@types/p5": "^1.7.6",
-    "@typescript-eslint/eslint-plugin": "^8.40.0",
-    "@typescript-eslint/parser": "^8.40.0",
-    "eslint": "^9.33.0",
-    "typescript": "~5.8.3",
-    "vite": "^7.1.2"
-  },
   "dependencies": {
-    "p5": "^2.0.4",
-    "seedrandom": "^3.0.5",
-    "tweakpane": "^4.0.5",
-    "zod": "^4.0.17"
+    "p5": "^1.9.0"
+  },
+  "devDependencies": {
+    "@types/p5": "^1.7.5",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2"
   }
 }
