log-panel modifed

--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
     "line": "#B0846A",
     "rows": 4,
     "widthRatio": 0.35,
-    "padding": { "left": 80, "right": 40, "top": 40, "bottom": 120 },
+    "anchor": "left",
+    "padding": { "left": 40, "right": 40, "top": 40, "bottom": 120 },
     "lineInsetTop": 14,
     "lineInsetBottom": 80,
     "lineThickness": 1,
